# emotion-notes

./: AI Rules  Readme.md  app.py  config.py  pyproject.toml
static/css/: calendar.css  style.css
static/js/: calendar.js  main.js
templates/: calendar.html  index.html
